--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ asttokens==2.0.5
 attrs==21.4.0
 backcall==0.2.0
 beautifulsoup4==4.10.0
+black==22.3.0
 bleach==4.1.0
 blinker==1.4
 cachetools==5.0.0
@@ -22,6 +23,7 @@ executing==0.8.3
 fastjsonschema==2.15.3
 gitdb==4.0.9
 GitPython==3.1.27
+hide==0.1.1.7
 idna==3.3
 importlib-metadata==4.11.3
 ipykernel==6.12.1
@@ -38,6 +40,8 @@ jupyterlab-widgets==1.1.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
+motor==2.5.1
+mypy-extensions==0.4.3
 nbclient==0.5.13
 nbconvert==6.4.5
 nbformat==5.3.0
@@ -48,10 +52,12 @@ packaging==21.3
 pandas==1.4.2
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
 pivottablejs==0.9.0
+platformdirs==2.5.1
 prometheus-client==0.14.0
 prompt-toolkit==3.0.29
 protobuf==3.20.0
@@ -62,7 +68,7 @@ pyarrow==7.0.0
 pycparser==2.21
 pydeck==0.7.1
 Pygments==2.11.2
-pymongo==4.1.0
+pymongo==3.12.3
 Pympler==1.0.1
 pyparsing==3.0.7
 pyrsistent==0.18.1
@@ -72,6 +78,7 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==22.3.0
 requests==2.27.1
+rows==0.3.1
 semver==2.13.0
 Send2Trash==1.8.0
 simplejson==3.17.6
@@ -84,11 +91,13 @@ streamlit-aggrid==0.2.3.post2
 terminado==0.13.3
 testpath==0.6.0
 toml==0.10.2
+tomli==2.0.1
 toolz==0.11.2
 tornado==6.1
 traitlets==5.1.1
 tzdata==2022.1
 tzlocal==4.2
+unicodecsv==0.14.1
 urllib3==1.26.9
 validators==0.18.2
 watchdog==2.1.7
