--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 altair==4.2.0
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 asttokens==2.0.5
+async-timeout==4.0.2
 attrs==21.4.0
 backcall==0.2.0
+bcrypt==3.2.2
 beautifulsoup4==4.10.0
 black==22.3.0
 bleach==4.1.0
@@ -14,13 +18,18 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
+colorama==0.4.4
+cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
 dnspython==2.2.1
 entrypoints==0.4
 executing==0.8.3
+extra-streamlit-components==0.1.53
 fastjsonschema==2.15.3
+fonttools==4.33.3
+frozenlist==1.3.0
 gitdb==4.0.9
 GitPython==3.1.27
 hide==0.1.1.7
@@ -33,14 +42,19 @@ ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.1
 jsonschema==4.4.0
+jupyter==1.0.0
 jupyter-client==7.2.1
+jupyter-console==6.4.3
 jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.1.0
+kiwisolver==1.4.2
 MarkupSafe==2.1.1
+matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
 motor==2.5.1
+multidict==6.0.2
 mypy-extensions==0.4.3
 nbclient==0.5.13
 nbconvert==6.4.5
@@ -68,6 +82,7 @@ pyarrow==7.0.0
 pycparser==2.21
 pydeck==0.7.1
 Pygments==2.11.2
+PyJWT==2.3.0
 pymongo==3.12.3
 Pympler==1.0.1
 pyparsing==3.0.7
@@ -76,7 +91,11 @@ python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
+pywin32==304
+pywinpty==2.0.5
 pyzmq==22.3.0
+qtconsole==5.3.0
+QtPy==2.1.0
 requests==2.27.1
 rows==0.3.1
 semver==2.13.0
@@ -88,6 +107,7 @@ soupsieve==2.3.2
 stack-data==0.2.0
 streamlit==1.8.1
 streamlit-aggrid==0.2.3.post2
+streamlit-authenticator==0.1.4
 terminado==0.13.3
 testpath==0.6.0
 toml==0.10.2
@@ -95,6 +115,7 @@ tomli==2.0.1
 toolz==0.11.2
 tornado==6.1
 traitlets==5.1.1
+typing_extensions==4.2.0
 tzdata==2022.1
 tzlocal==4.2
 unicodecsv==0.14.1
@@ -104,4 +125,5 @@ watchdog==2.1.7
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
+yarl==1.7.2
 zipp==3.8.0
